<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".startup_screen">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:id="@+id/start_button"
        android:gravity="center_horizontal">


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button"
            android:text="@string/goTohighScoreButton"
            android:onClick="goToHighScores"
            android:layout_marginRight="60sp"/>


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/startButtonStartupScreen"
            android:onClick="startGame"/>
    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/inputfield_p1"
        android:layout_marginTop="40dp"
        android:layout_below="@+id/start_button">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enterNameP1">
        </TextView>

        <RelativeLayout
            style="@style/inputfieldContainer"
            android:layout_height="wrap_content">

            <Spinner
                style="@style/inputfieldSpinner"
                android:id="@+id/spinnerP1"/>

            <EditText
                style="@style/inputfieldEditText"
                android:id="@+id/usernameInputP1Startupscreen"
                android:text="@string/defaultP1Name"/>

        </RelativeLayout>

    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/inputfield_p2"
        android:layout_marginTop="40dp"
        android:layout_below="@+id/inputfield_p1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/usernameInputP2Startupscreen">
        </TextView>

        <RelativeLayout
            style="@style/inputfieldContainer"
            android:layout_height="wrap_content">

            <Spinner
                style="@style/inputfieldSpinner"
                android:id="@+id/spinnerP2"/>

            <EditText
                style="@style/inputfieldEditText"
                android:id="@+id/usernameInputP2Startupscreen"
                android:text="@string/defaultNameP2"/>

        </RelativeLayout>

    </LinearLayout>



</RelativeLayout>
