<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content" android:layout_height="wrap_content"
    android:orientation="vertical">


    <Button
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:text="@string/confirmInputButton"
        android:id="@+id/confirmRestart"
        android:layout_weight="1"
        android:layout_marginTop="10dp"/>

    <ProgressBar
        style="?android:attr/progressBarStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:id="@+id/progressBar"
        android:layout_weight="1" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="1">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/defaultP1NameGameScreen"
                android:id="@+id/p1NameView"/>

            <TextView
                android:layout_toRightOf="@id/p1NameView"
                android:layout_width="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_height="wrap_content"
                android:id="@+id/p1ScoreView"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/defaultNameP1GameScreen"
                android:id="@+id/p2NameView"/>

            <TextView
                android:layout_toRightOf="@id/p2NameView"
                android:layout_width="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_height="wrap_content"
                android:id="@+id/p2ScoreView"/>
        </RelativeLayout>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:id="@+id/playerTurnView"
        android:layout_marginTop="20sp"
        android:text="@string/defaultPlayerTurnGameScreen"
        android:layout_weight="1" />

    <RelativeLayout
        android:layout_marginTop="20sp"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/defaultCurrentWordAnnouncerGameScreen"
            android:id="@+id/currentWordAnouncer"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:layout_below="@+id/currentWordAnouncer"
            style="@style/word_text_gamescreen"
            android:id="@+id/ghostWordTextview"
            android:text=""/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:layout_marginLeft="3dp"
            android:maxLength="1"
            style="@style/word_text_gamescreen"
            android:id="@+id/playerLetterInputField"
            android:layout_toRightOf="@+id/ghostWordTextview"
            android:layout_below="@+id/currentWordAnouncer"/>
    </RelativeLayout>
</LinearLayout>
